[gd_scene load_steps=7 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://game/TurretArm.tscn" type="PackedScene" id=2]
[ext_resource path="res://game/Enemy.gd" type="Script" id=3]
[ext_resource path="res://game/EnemyBullet.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 329.099

[sub_resource type="CircleShape2D" id=2]
radius = 194.248

[node name="Enemy" type="Node2D"]
script = ExtResource( 3 )
bullet = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 1 )

[node name="ShootRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShootRange"]
shape = SubResource( 1 )

[node name="CloseRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CloseRange"]
modulate = Color( 0.403922, 0, 0, 1 )
shape = SubResource( 2 )

[node name="TurretArm" parent="." instance=ExtResource( 2 )]
position = Vector2( 0.158764, -0.0763493 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AlertTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="TextEdit" type="TextEdit" parent="."]
margin_left = -47.0
margin_top = -143.0
margin_right = 46.0
margin_bottom = -92.0
text = " IDLE"
readonly = true
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="ShootRange" to="." method="_on_ShootRange_body_entered"]
[connection signal="body_exited" from="ShootRange" to="." method="_on_ShootRange_body_exited"]
[connection signal="body_entered" from="CloseRange" to="." method="_on_CloseRange_body_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="timeout" from="AlertTimer" to="." method="_on_AlertTimer_timeout"]
